[metadata]
name = Quart-Bcrypt 
version = attr: quart_bcrypt.__version__
url = https://github.com/crood58/quart-bcrypt/
project_urls =
    Documentation = https://quart-bcrypt.readthedocs.io/
    Changes = https://flask-wtf.readthedocs.io/changes/
    Source Code = https://github.com/crood58/quart-bcrypt/
    Issue Tracker = https://github.com/crood58/quart-bcrypt/issues/
license = BSD-3-Clause
author = Chris Rood 
author_email = crood58@gmail.com
maintainer = Chris Rood 
maintainer_email = crood58@gmail.com
description = Brcrypt hashing for Quart.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Development
    Environment :: Web Environment
    Framework :: Quart 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: ASGI
    Topic :: Internet :: WWW/HTTP :: ASGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    quart_bcrypt 
    tests

[coverage:paths]
source =
    src
    */site-packages
